@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -17,7 +17,7 @@ import static org.openhab.binding.yioremote.internal.YIOremoteBindingConstants.*
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.Set;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 
@@ -177,20 +177,20 @@ public class YIOremoteDockHandler extends BaseThingHandler {
         boolean success = false;
 
         if (message.has("type")) {
-            if (message.get("type").toString().equalsIgnoreCase("\"auth_required\"")) {
+            if ("\"auth_required\"".equalsIgnoreCase(message.get("type").toString())) {
                 success = true;
                 receivedStatus = "Authentication required";
-            } else if (message.get("type").toString().equalsIgnoreCase("\"auth_ok\"")) {
+            } else if ("\"auth_ok\"".equalsIgnoreCase(message.get("type").toString())) {
                 authenticationOk = true;
                 success = true;
                 receivedStatus = "Authentication ok";
-            } else if (message.get("type").toString().equalsIgnoreCase("\"dock\"") && message.has("message")) {
-                if (message.get("message").toString().equalsIgnoreCase("\"pong\"")) {
+            } else if ("\"dock\"".equalsIgnoreCase(message.get("type").toString()) && message.has("message")) {
+                if ("\"pong\"".equalsIgnoreCase(message.get("message").toString())) {
                     heartBeat = true;
                     success = true;
                     receivedStatus = "Heart beat received";
-                } else if (message.get("message").toString().equalsIgnoreCase("\"ir_send\"")) {
-                    if (message.get("success").toString().equalsIgnoreCase("true")) {
+                } else if ("\"ir_send\"".equalsIgnoreCase(message.get("message").toString())) {
+                    if ("true".equalsIgnoreCase(message.get("success").toString())) {
                         receivedStatus = "Send IR Code successfully";
                         success = true;
                     } else {
@@ -203,7 +203,7 @@ public class YIOremoteDockHandler extends BaseThingHandler {
                     heartBeat = false;
                     success = false;
                 }
-            } else if (message.get("command").toString().equalsIgnoreCase("\"ir_receive\"")) {
+            } else if ("\"ir_receive\"".equalsIgnoreCase(message.get("command").toString())) {
                 receivedStatus = message.get("code").toString().replace("\"", "");
                 if (receivedStatus.matches("[0-9]?[0-9][;]0[xX][0-9a-fA-F]+[;][0-9]+[;][0-9]")) {
                     irCodeReceivedHandler.setCode(message.get("code").toString().replace("\"", ""));
@@ -241,8 +241,7 @@ public class YIOremoteDockHandler extends BaseThingHandler {
             }
             return result;
         } catch (IllegalArgumentException e) {
-            JsonObject result = new JsonObject();
-            return result;
+            return new JsonObject();
         }
     }
 
@@ -253,7 +252,7 @@ public class YIOremoteDockHandler extends BaseThingHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(YIOremoteDockActions.class);
+        return Set.of(YIOremoteDockActions.class);
     }
 
     @Override
