@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -21,7 +21,6 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Dictionary;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -96,7 +95,7 @@ public abstract class AbstractModbusOSGiTest extends JavaOSGiTest {
 
         @Override
         public Set<@NonNull String> getSubscribedEventTypes() {
-            return Collections.singleton(ItemStateEvent.TYPE);
+            return Set.of(ItemStateEvent.TYPE);
         }
 
         @Override
